--- a/style.css
+++ b/style.css
@@ -85,4 +85,23 @@ button {
         max-width: 720px;
     }
 }
-                                            
+.header {
+    padding: 0 0.625rem;
+    margin-bottom: 1.875rem;
+}
+
+.description {
+    font-style: italic;
+    font-weight: 200;
+    text-shadow: 1px 1px 1px rgba(253, 147, 250, 0.4);
+}
+
+.clue {
+    margin-left: 0.25rem;
+    font-size: 0.9rem;
+    color: #f8abab;
+}
+
+.text-center {
+    text-align: center;
+}                                            
